# zip_analyzer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  zip_analyzer.py  zip_manager_gui.py
src/zip_analyzer/: __init__.py  core.py  gui.py
